--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                     label: "Username",
                     name: "username",
                     required: true,
-                    value: "admin",
+                    value: "jane-doe",
                     otherAttrs: 'autocomplete="username"'
                 })}
                             
